2012-05-02  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/ieee754/ldbl-128ibm/e_acosl.c (__ieee754_acosl): Fix
	long double comparison inaccuracies.
	* sysdeps/ieee754/ldbl-128ibm/e_asinl.c (__ieee754_asinl): Likewise.
	* sysdeps/powerpc/fpu/libm-test-ulps: Update.

2012-05-04  Andreas Schwab  <schwab@linux-m68k.org>

	* sysdeps/unix/make-syscalls.sh: Fix check for version aliases.
	* sysdeps/unix/sysv/linux/i386/syscalls.list: Revert last change.

2012-05-04  Joseph Myers  <joseph@codesourcery.com>

	[BZ #14049]
	* stdlib/strtod_l.c (____STRTOF_INTERNAL): Check for trailing
	nonzero digits before rounding a hex value.
	* stdlib/tst-strtod.c (tests): Add another test.

2012-05-03  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* sysdeps/s390/fpu/libm-test-ulps: Update.

2012-05-03  Andreas Jaeger  <aj@suse.de>

	* malloc/mcheck.c (mcheck): Add barrier so that malloc/free pair
	does not get optimized out.
	(malloc_opt_barrier): New.

2012-05-03  Andreas Jaeger  <aj@suse.de>
	    Roland McGrath  <roland@hack.frob.com>

	* Makerules (.PRECIOUS): Add %.symlist pattern to prevent
	intermediate file deletion.
	(generated): Add .symlist files.

2012-05-03  Joseph Myers  <joseph@codesourcery.com>

	[BZ #13775]
	* libio/bits/stdio-ldbl.h [__USE_XOPEN2K8] (__dprintf_chk):
	Redirect under this condition.
	[__USE_XOPEN2K8] (__vdprintf_chk): Likewise.
	[__USE_GNU] (__dprintf_chk): Not under this condition.
	[__USE_GNU] (__vdprintf_chk): Likewise.
	* libio/bits/stdio2.h [__USE_XOPEN2K8] (__dprintf_chk): Declare
	under this condition.
	[__USE_XOPEN2K8] (__vdprintf_chk): Likewise.
	[__USE_XOPEN2K8] (dprintf): Define under this condition.
	[__USE_XOPEN2K8] (vdprintf): Likewise.
	[__USE_GNU] (__dprintf_chk): Not under this condition.
	[__USE_GNU] (__vdprintf_chk): Likewise.
	[__USE_GNU] (dprintf): Likewise.
	[__USE_GNU] (vdprintf): Likewise.

2012-05-03  Roland McGrath  <roland@hack.frob.com>

	* elf/Makefile (common-generated): Set this instead of generated for