@@ -1,3 +1,0 @@
-/* In a 4.4-derived world, tcgetattr is just one ioctl.  */
-
-#include <sysdeps/posix/isatty.c>
